# ccgboard

./: README
docs/: Cyberdeck.dia  Cyberdeck.ps
gccg_package/: CARDBUONE.tgz  Cyber.tgz  CyberDeck.tgz
gccg_package/modules/: gccg-Cyberdeck-0.1.01.tgz  gccg-Cyberdeck-server-0.1.01.tgz
server/: Cyberdeck_server.pl  test_all_method.pl
server/lib/: Bot.pm  Conf.pm  Database.pm  Game.pm  Network.pm  Rules.pm  Session.pm  User.pm
server/old/: Card.pm  Connection.pm  Const.pm  CyberDeck.pm  Deck.pm  Game.pm  Network.pm  SSocket.pm  Session.pm  User.pm
server/old-c/interface/: AUTHORS  ChangeLog  Makefile.am  README  acconfig.h  autogen.sh  configure.in  cyberdeck.gladep
server/old-c/interface/CVS/: Entries  Repository  Root
server/old-c/interface/po/: POTFILES.in
server/old-c/interface/po/CVS/: Entries  Repository
server/old-c/interface/src/: Makefile.am  interface.cc  main.cc  main.hh  main_glade.cc  main_glade.hh
server/old-c/interface/src/CVS/: Entries  Repository
server/rpc/: checklogin.xpl  register.xpl  test.xpl
server/xpl_made/: BASE.base  BASE.xpl  test.pl
stuff/: Carta.pl  Carta.xcf  Cartagccg.xcf  Cartagrigi.xcf  Carte  Cartebck  Comm-Unc-Rare.doc  ProgettoRete  Roadmap  cyberdeck.glade  cyberdeckcards.csv  cyberdeckcards.sxc  deckcards.csv  deckcards.sxc  index.html
util/card_creator/: DATA  build.sh  card  card_print.c  cartetotali.sxc  cartetotali0.8.xls  cartetotali0.csv  deck.csv  run.sh
util/card_creator_paper/: .card_print.c.swp  Cyberdeck-card.xml  cartetotali.csv  cartetotali.xls  cartetotali0.8.sxc  cartetotali0.sxc
(+13 files in other folders)
