# generated 2004/2/8 21:52:22 CET by newmark@molly.(none)
# using glademm V2.0.0
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = interface

interface_SOURCES = \
	interface.cc\
	main_glade.cc \
	main.cc 

noinst_HEADERS = \
	main_glade.hh \
	main.hh 

CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ 

interface_LDADD = @LIBS@ @GTKMM_LIBS@ 
